fix loading spinner on mobile

--- a/client/layout/index.css
+++ b/client/layout/index.css
@@ -35,4 +35,8 @@ body {
   #container {
     flex-flow: column;
   }
+
+  #grid {
+    min-height: 280px;
+  }
 }
